# llp_3

./: README.md
client/: CMakeLists.txt  main.c
client/net/: socket_wrapper.c  socket_wrapper.h
client/parser/: input.c  input.h
client/parser/ast/: ast.c  ast.h
client/parser/lexer/: lexer.c  lexer.l
client/parser/parser/: parser.c  parser.h  parser.y
client/schema/: query_schema.xsd  response_schema.xsd
client/transfer/: ast_to_xml.c  ast_to_xml.h
server/: CMakeLists.txt  main.c  socket_wrapper.c  socket_wrapper.h
server/database/include/data/: comparator.h  data.h
server/database/include/file/: allocator.h  dataBlocks.h  fileApi.h  iterator.h  tableBlocks.h
server/database/include/platformic/: cutfile.h
server/database/include/query/: query.h
server/database/include/util/: testPerfomance.h  unitTests.h  util.h
server/database/src/: main.c
server/database/src/data/: comparator.c
server/database/src/file/: allocator.c  fileApi.c  iterator.c  tableBlocks.c
server/database/src/platformic/: cutfile.c
server/database/src/query/: query.c
server/database/src/util/: testPerfomance.c  unitTests.c  util.c
server/net/: socket_wrapper.c  socket_wrapper.h
server/schema/: query_schema.xsd  response_schema.xsd
server/transfer/: from_xml.c  from_xml.h
